--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,33 +9,134 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/o0keyD"
+        android:id="@+id/o0keyA"
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:layout_marginTop="60dp"
         android:backgroundTint="@color/white"
-        android:onClick="click"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         />
 
     <Button
-        android:id="@+id/o0keyE"
+        android:id="@+id/o0keyB"
         android:layout_width="50dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="-25dp"
         android:layout_marginTop="60dp"
-        android:layout_toRightOf="@+id/o0keyDsharp"
+        android:layout_toEndOf="@+id/o0keyA"
         android:backgroundTint="@color/white"
-        android:onClick="click"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         />
 
     <Button
-        android:id="@+id/o0keyDsharp"
+        android:id="@+id/o1keyC"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/o0keyB"
+        android:backgroundTint="@color/white"
+        />
+
+    <Button
+        android:id="@+id/o1keyD"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/o1keyC"
+        android:backgroundTint="@color/white"
+        />
+
+    <Button
+        android:id="@+id/o1keyE"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/o1keyD"
+        android:backgroundTint="@color/white"
+        />
+
+    <Button
+        android:id="@+id/o1keyF"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/o1keyE"
+        android:backgroundTint="@color/white"
+        />
+
+    <Button
+        android:id="@+id/o1keyG"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/o1keyF"
+        android:backgroundTint="@color/white"
+        />
+
+    <Button
+        android:id="@+id/o1keyA"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_toEndOf="@+id/o1keyG"
+        android:backgroundTint="@color/white"
+        />
+
+    <Button
+        android:id="@+id/o0keyAsharp"
+        android:layout_width="40dp"
         android:layout_height="200dp"
-        android:layout_toRightOf="@+id/o0keyD"
-        android:layout_marginLeft="-25dp"
+        android:layout_toEndOf="@+id/o0keyA"
+        android:layout_marginStart="-20dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/black"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        />
+
+    <Button
+        android:id="@+id/o1keyCsharp"
+        android:layout_width="40dp"
+        android:layout_height="200dp"
+        android:layout_toEndOf="@+id/o1keyC"
+        android:layout_marginStart="-20dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/black"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        />
+
+    <Button
+        android:id="@+id/o1keyDsharp"
+        android:layout_width="40dp"
+        android:layout_height="200dp"
+        android:layout_toEndOf="@+id/o1keyD"
+        android:layout_marginStart="-20dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/black"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        />
+
+    <Button
+        android:id="@+id/o1keyFsharp"
+        android:layout_width="40dp"
+        android:layout_height="200dp"
+        android:layout_toEndOf="@+id/o1keyF"
+        android:layout_marginStart="-20dp"
+        android:layout_marginTop="60dp"
+        android:backgroundTint="@color/black"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        />
+
+    <Button
+        android:id="@+id/o1keyGsharp"
+        android:layout_width="40dp"
+        android:layout_height="200dp"
+        android:layout_toEndOf="@+id/o1keyG"
+        android:layout_marginStart="-20dp"
         android:layout_marginTop="60dp"
         android:backgroundTint="@color/black"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
